@@ -1,6 +1,5 @@
-%Warning-RANDC: t/t_randc_oversize_bad.v:8:21: Unsupported: Converting 'randc' to 'rand'
-    8 |    randc bit [33:0] i;
+%Error: t/t_randc_oversize_bad.v:8:21: Maxiumum implemented width for randc is 32 bits, 'i' is 38 bits
+                                     : ... In instance t
+    8 |    randc bit [37:0] i;
       |                     ^
-                ... For warning description see https://verilator.org/warn/RANDC?v=latest
-                ... Use "/* verilator lint_off RANDC */" and lint_on around source to disable this message.
 %Error: Exiting due to
