@@ -5,8 +5,13 @@
 // SPDX-License-Identifier: CC0-1.0
 
 class Cls;
-   randc bit [33:0] i;
+   randc bit [37:0] i;
 endclass
 
 module t (/*AUTOARG*/);
+   Cls c;
+   initial begin
+      c = new;
+      c.randomize;
+   end
 endmodule
